--- a/css/style.css
+++ b/css/style.css
@@ -270,3 +270,182 @@ body {
     font-family: roboto;
     left: 90px;
 }
+
+.offer {
+    width: 100%;
+    height: 80vh;
+    position: absolute;
+    top: 105%;
+    /* left: 5%; */
+    background-color: rgb(218, 215, 215);
+}
+
+.offer h1 {
+    text-align: center;
+    position: relative;
+    top: 20px;
+    font-family: roboto;
+}
+
+.offer span {
+    color: rgb(218, 147, 15);
+}
+
+.offer_container {
+    width: 80%;
+    height: 80%;
+    /* background-color: blue; */
+    position: relative;
+    left: 10%;
+    top: 8%;
+    display: grid;
+    grid-template-columns: auto auto auto auto;
+    padding: 10px;
+    gap: 20px;
+}
+
+.offer_container > div {
+    border-radius: 5px;
+    
+}
+
+.grid1 {
+    background-color: rgb(240, 240, 240);
+}
+
+.grid1_img img{
+    width: 70%;
+    height: 25vh;
+    position: relative;
+    top: 20px;
+    left: 40px;
+    border-radius: 50%;
+}
+
+.grid1 span {
+    font-weight: 600;
+    font-family: roboto;
+    font-size: 20px;
+    position: relative;
+    left: 33%;
+    top: 50px;
+}
+
+.grid1 p {
+    width: 80%;
+    position: relative;
+    left: 10%;
+    top: 80px;
+    text-align: center;
+}
+
+.grid2 {
+    background-color: rgb(20, 20, 20);
+}
+
+
+.grid2_img img{
+    width: 70%;
+    height: 25vh;
+    position: relative;
+    top: 20px;
+    left: 40px;
+    /* background-color: red; */
+    border-radius: 50%;
+}
+
+.grid2 span {
+    font-weight: 600;
+    font-family: roboto;
+    font-size: 20px;
+    position: relative;
+    left: 33%;
+    top: 50px;
+}
+
+.grid2 p {
+    width: 80%;
+    position: relative;
+    left: 10%;
+    top: 80px;
+    text-align: center;
+    color: rgb(220, 214, 214);
+}
+
+.grid3 {
+    background-color: rgb(20, 20, 20);
+}
+
+.grid3_img{
+    width: 70%;
+    height: 25vh;
+    position: relative;
+    top: 20px;
+    left: 40px;
+    background-color: white;
+    border-radius: 50%;
+}
+
+.grid3_img img {
+    width: 50%;
+    position: relative;
+    left: 26%;
+    top: 37px;
+}
+
+.grid3 span {
+    font-weight: 600;
+    font-family: roboto;
+    font-size: 20px;
+    position: relative;
+    left: 33%;
+    top: 50px;
+}
+
+.grid3 p {
+    width: 80%;
+    position: relative;
+    left: 10%;
+    top: 80px;
+    text-align: center;
+    color: rgb(220, 214, 214);
+}
+
+.grid4 {
+    background-color: rgb(240, 240, 240);
+}
+
+.grid4_img{
+    width: 60%;
+    height: 25vh;
+    position: relative;
+    top: 20px;
+    left: 55px;
+    background-color: white;
+    border-radius: 50%;
+}
+
+.grid4_img img {
+    width: 50%;
+    position: relative;
+    left: 26%;
+    top: 37px;
+}
+
+
+.grid4 span {
+    font-weight: 600;
+    font-family: roboto;
+    font-size: 20px;
+    position: relative;
+    left: 33%;
+    top: 50px;
+}
+
+.grid4 p {
+    width: 80%;
+    position: relative;
+    left: 10%;
+    top: 80px;
+    text-align: center;
+}
