--- a/css/style.css
+++ b/css/style.css
@@ -552,3 +552,178 @@ body {
     height: 100%;
     object-fit: cover;
 }
+
+.load_more {
+    position: relative;
+    top: 180px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.load_more button {
+    width: 10%;
+    height: 5vh;
+    background-color: none;
+    border: 1px solid black;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+.load_more button a {
+    text-decoration: none;
+    color: black;
+    font-size: 15px;
+}
+
+.load_more button:hover {
+    background-color: rgb(20, 20, 20);
+    transition: 0.5s;
+}
+
+.load_more button:hover a {
+    color: rgb(218, 147, 15);
+}
+
+.client {
+    width: 100%;
+    height: 75vh;
+    background-color: rgb(211, 211, 211);
+    position: absolute;
+    top: 370%;
+}
+
+.client h1 {
+    text-align: center;
+    position: relative;
+    top: 50px;
+    font-family: roboto;
+}
+
+.client span {
+    color: rgb(218, 147, 15);
+}
+
+.client p {
+    font-size: 32px;
+    font-weight: 600;
+    text-align: center;
+    position: relative;
+    top: 60px;
+    font-family: roboto;
+}
+
+.client_container {
+    width: 80%;
+    height: 40vh;
+    position: relative;
+    left: 10%;
+    top: 25%;
+    /* background-color: blue; */
+    display: grid;
+    grid-template-columns: auto auto auto;
+    padding: 10px;
+    gap: 20px;
+}
+
+.client_container > div {
+    border: none;
+    border-radius: 5px;
+    background-color: rgb(225, 220, 220);
+}
+
+.left img {
+    width: 50px;
+    height: 7vh;
+    border-radius: 50%;
+    position: relative;
+    left: 8%;
+    top: 20px;
+}
+
+.profile_info {
+    width: 30%;
+    height: 7vh;
+    position: relative;
+    left: 30%;
+    top: -30px;
+}
+
+.profile_info p {
+    font-size: 18px;
+    position: relative;
+    top: 3%;
+    left: -18px;
+    font-weight: 500;
+}
+
+.profile_info span {
+    position: relative;
+    top: 5px;
+}
+
+.left_msg {
+    width: 90%;
+    height: 22vh;
+    /* background-color: teal; */
+    position: relative;
+    left: 20px;
+}
+
+.left_msg p {
+    font-size: 15px;
+    float: left;
+    font-weight: 300;
+    position: relative;
+    top: 10px;
+}
+
+.center img {
+    width: 50px;
+    height: 7vh;
+    border-radius: 50%;
+    position: relative;
+    left: 8%;
+    top: 20px;
+}
+
+.center_msg {
+    width: 90%;
+    height: 22vh;
+    /* background-color: teal; */
+    position: relative;
+    left: 20px;
+}
+
+.center_msg p {
+    font-size: 15px;
+    float: left;
+    font-weight: 300;
+    position: relative;
+    top: 10px;
+}
+
+.right img {
+    width: 50px;
+    height: 7vh;
+    border-radius: 50%;
+    position: relative;
+    left: 8%;
+    top: 20px;
+}
+
+.right_msg {
+    width: 90%;
+    height: 22vh;
+    /* background-color: teal; */
+    position: relative;
+    left: 20px;
+}
+
+.right_msg p {
+    font-size: 15px;
+    float: left;
+    font-weight: 300;
+    position: relative;
+    top: 10px;
+}
