--- a/css/style.css
+++ b/css/style.css
@@ -739,3 +739,12 @@ body {
     position: relative;
     top: 10px;
 }
+
+
+.join {
+    width: 100%;
+    height: 50vh;
+    background-color: rgb(225, 220, 220);
+    position: absolute;
+    top: 445%;
+}
