--- a/css/style.css
+++ b/css/style.css
@@ -857,3 +857,50 @@ body {
     position: relative;
     top: 16px;
 }
+
+.social_platform {
+    width: 15%;
+    height: 8vh;
+    /* background-color: red; */
+    position: absolute;
+    top: 70%;
+    left: 5%;
+    display: flex;
+    justify-content: start;
+    align-items: center;
+}
+
+.flex_items {
+    padding: 10px;
+}
+
+.flex_items img {
+    width: 30px;
+}
+
+#center h1 {
+    text-align: center;
+    position: relative;
+    top: 45px;
+    color: rgb(218, 147, 15);
+    font-family: roboto, sans-serif;
+    font-size: 28px;
+    text-decoration: underline;
+}
+
+
+#navigation ul li {
+    position: absolute;
+    top: 90px;
+    left: 44%;
+    list-style-type: none;
+}
+
+#navigation ul li a{
+    text-decoration: none;
+    color: black;
+    font-size: 18px;
+    font-family: roboto;
+    margin: 15px;
+    display: block;
+}
